--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="#case-studies">Case Studies</a>
         <a href="#projects">Projects</a>
         <a href="#toolbox">Toolbox</a>
+        <a href="#notes">Notes</a>
         <a href="#services">Services</a>
         <a href="#contact">Contact</a>
       </div>
@@ -128,8 +129,8 @@
         </article>
         <article class="case-card">
           <h3>Observability Platform</h3>
-          <p>Prometheus + Grafana stack with alert tuning and actionable dashboards.</p>
-          <div class="case-meta">Prometheus • Grafana • Loki</div>
+          <p>Grafana + Zabbix stack with unified alerts and actionable dashboards.</p>
+          <div class="case-meta">Grafana • Zabbix • Alerting</div>
           <a class="btn text" href="case-studies/observability-platform.html">Read Case Study</a>
         </article>
         <article class="case-card">
@@ -137,6 +138,12 @@
           <p>GitHub Actions pipeline for linting, testing, and container builds.</p>
           <div class="case-meta">GitHub Actions • Docker</div>
           <a class="btn text" href="case-studies/cicd-pipeline.html">Read Case Study</a>
+        </article>
+        <article class="case-card">
+          <h3>Linux Homelab Automation</h3>
+          <p>Bootstrap scripts, configuration management, and backup automation.</p>
+          <div class="case-meta">Bash • Ansible • Backups</div>
+          <a class="btn text" href="case-studies/linux-homelab-automation.html">Read Case Study</a>
         </article>
       </div>
     </section>
@@ -188,6 +195,30 @@
         <span>Vault</span>
         <span>Networking</span>
         <span>AWS / Azure</span>
+      </div>
+    </section>
+
+    <section id="notes" class="section">
+      <div class="section-title">
+        <h2>DevOps Notes</h2>
+        <p>Practical tutorials and field notes on Linux, monitoring, and automation.</p>
+      </div>
+      <div class="notes-grid">
+        <article class="note-card">
+          <h3>Linux Hardening Baseline</h3>
+          <p>Step-by-step checklist for SSH, firewall rules, and system updates.</p>
+          <div class="note-meta">Linux • Security</div>
+        </article>
+        <article class="note-card">
+          <h3>Zabbix + Grafana Quickstart</h3>
+          <p>Install, connect, and build an infra health dashboard in under an hour.</p>
+          <div class="note-meta">Monitoring • Dashboards</div>
+        </article>
+        <article class="note-card">
+          <h3>Automated Backups with Rsync</h3>
+          <p>Incremental backups, retention policies, and verification scripts.</p>
+          <div class="note-meta">Automation • Backups</div>
+        </article>
       </div>
     </section>
 
