--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#about">About</a>
         <a href="#impact">Impact</a>
         <a href="#case-studies">Case Studies</a>
-        <a href="#projects">Projects</a>
+        <a href="projects.html">Projects</a>
         <a href="#toolbox">Toolbox</a>
         <a href="#notes">Notes</a>
         <a href="#services">Services</a>
@@ -125,25 +125,37 @@
           <h3>Infrastructure Automation</h3>
           <p>Reusable Terraform modules and automated provisioning for repeatable environments.</p>
           <div class="case-meta">Terraform • Ansible • Linux</div>
-          <a class="btn text" href="case-studies/infra-automation.html">Read Case Study</a>
+          <div class="case-links">
+            <a class="btn text" href="case-studies/infra-automation.html">Read Case Study</a>
+            <a class="btn text" href="https://github.com/zdravkopanov/infra-automation" target="_blank" rel="noopener noreferrer">GitHub</a>
+          </div>
         </article>
         <article class="case-card">
           <h3>Observability Platform</h3>
           <p>Grafana + Zabbix stack with unified alerts and actionable dashboards.</p>
           <div class="case-meta">Grafana • Zabbix • Alerting</div>
-          <a class="btn text" href="case-studies/observability-platform.html">Read Case Study</a>
+          <div class="case-links">
+            <a class="btn text" href="case-studies/observability-platform.html">Read Case Study</a>
+            <a class="btn text" href="https://github.com/zdravkopanov/observability-platform" target="_blank" rel="noopener noreferrer">GitHub</a>
+          </div>
         </article>
         <article class="case-card">
           <h3>CI/CD Pipeline Template</h3>
           <p>GitHub Actions pipeline for linting, testing, and container builds.</p>
           <div class="case-meta">GitHub Actions • Docker</div>
-          <a class="btn text" href="case-studies/cicd-pipeline.html">Read Case Study</a>
+          <div class="case-links">
+            <a class="btn text" href="case-studies/cicd-pipeline.html">Read Case Study</a>
+            <a class="btn text" href="https://github.com/zdravkopanov/cicd-pipeline-template" target="_blank" rel="noopener noreferrer">GitHub</a>
+          </div>
         </article>
         <article class="case-card">
           <h3>Linux Homelab Automation</h3>
           <p>Bootstrap scripts, configuration management, and backup automation.</p>
           <div class="case-meta">Bash • Ansible • Backups</div>
-          <a class="btn text" href="case-studies/linux-homelab-automation.html">Read Case Study</a>
+          <div class="case-links">
+            <a class="btn text" href="case-studies/linux-homelab-automation.html">Read Case Study</a>
+            <a class="btn text" href="https://github.com/zdravkopanov/linux-homelab-automation" target="_blank" rel="noopener noreferrer">GitHub</a>
+          </div>
         </article>
       </div>
     </section>
